# matrix_balancing

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  __init__.py  conftest.py  pyproject.toml  run_pytests.py  run_tests.py
.github/workflows/: lint.yml  test.yml
.opencode/: config.json
.opencode/plans/: code-duplication-analysis.md
.opencode/skills/code-reviewer/: SKILL.md
doc/: API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  README.md
notebooks/: app.py  gras_test.ipynb  mrgras_test.ipynb
reports/: code-review-report.md
src/: __init__.py
src/ras_balancer/: __init__.py  core.py  generator.py  operations.py  shocker.py  types.py
tests/: __init__.py  test_core.py  test_generator.py  test_gras.py  test_mrgras.py  test_operations.py  test_ras.py  test_shocker.py
