[project]
name = "ras-balancer"
version = "0.1.0"
description = "Code project for balancing algorithms"
readme = "README.md"
authors = [{name = "Raul De Maio", email = "rauldemaio@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "logging>=0.4.9.6",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
